--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.sp.mad_project">
 
     <application
         android:allowBackup="true"
@@ -12,11 +12,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MAD_Project"
         tools:targetApi="31">
+
         <activity
             android:name=".RecipeList"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/title_activity_recipe_list"
-            android:theme="@style/Theme.MAD_Project" />
-    </application>
+            android:theme="@style/Theme.MAD_Project">
 
+            <!-- Add Intent Filter to Main Activity -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+    </application>
 </manifest>
+
