added SQL, username, improved add item, item list

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.sp.mad_project">
@@ -12,7 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MAD_Project"
         tools:targetApi="31">
-
+        <activity
+            android:name=".AddRecipes"
+            android:exported="false" />
         <activity
             android:name=".RecipeList"
             android:exported="true"
@@ -22,10 +25,10 @@
             <!-- Add Intent Filter to Main Activity -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
     </application>
-</manifest>
 
+</manifest>
