--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,18 @@
         android:theme="@style/Theme.MAD_Project"
         tools:targetApi="31">
         <activity
+            android:name=".Splash_Screen"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".Homepage"
+            android:exported="false" />
+        <activity
             android:name=".AddRecipes"
             android:exported="false" />
         <activity
@@ -21,13 +33,6 @@
             android:exported="true"
             android:label="@string/title_activity_recipe_list"
             android:theme="@style/Theme.MAD_Project">
-
-            <!-- Add Intent Filter to Main Activity -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
