--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MAD_Project"
         tools:targetApi="31">
+        <activity
+            android:name=".RecipeInfo"
+            android:exported="false" />
         <activity
             android:name=".Splash_Screen"
             android:exported="true">
@@ -34,8 +38,7 @@
             android:name=".RecipeList"
             android:exported="true"
             android:label="@string/title_activity_recipe_list"
-            android:theme="@style/Theme.MAD_Project">
-        </activity>
+            android:theme="@style/Theme.MAD_Project"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
