--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.MAD_Project"
         tools:targetApi="31">
         <activity
+            android:name=".CookingTimer"
+            android:exported="false" />
+        <activity
             android:name=".RecipeInfo"
             android:exported="false" />
         <activity
@@ -38,7 +41,7 @@
             android:name=".RecipeList"
             android:exported="true"
             android:label="@string/title_activity_recipe_list"
-            android:theme="@style/Theme.MAD_Project"></activity>
+            android:theme="@style/Theme.MAD_Project" />
 
         <meta-data
             android:name="preloaded_fonts"
